[tool.poetry]
name = "pvs-testing"
version = "0.1.0"
description = ""
authors = ["C8P9BJ_Zilver <Kurtis.Odom@CignaHealthcare.com>"]
packages = [
    { include = "pvs_testing" }
]

[tool.poetry.dependencies]
python = "^3.9"
teradatasql = "^20.0.0.25"
pandas = "^2.2.3"

[tool.poetry.scripts]
pvs_testing = "pvs_testing.pvs_testing:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
